--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -19,13 +19,13 @@
 		<div class="container">
 			<div class="row header__top">
 <!-- HEADER LOGO -->
-				<div class="col-lg-6">
+				<div class="col-xs-6">
 					<div class="header__top_logo">
 						<span class="logo_text"><span class="logo_colored">S</span>mart</span>
 					</div>
 				</div>
 <!-- HEADER MENU -->
-				<div class="col-lg-6">
+				<div class="col-xs-6">
 					<a href="#" class="header__top_menu">
 						<span class="header__menu_stick"></span>
 					</a>
