remove unnecessary span in header__logo

--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -21,7 +21,7 @@
 <!-- HEADER LOGO -->
 				<div class="col-xs-6">
 					<div class="header__top_logo">
-						<span class="logo_text"><span class="logo_colored">S</span>mart</span>
+						<span class="logo_colored">S</span>mart
 					</div>
 				</div>
 <!-- HEADER MENU -->
