--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -34,7 +34,7 @@
 			</div>
 <!-- HEADER CAPTION -->
 			<div class="row header__caption">
-				<div class="col-lg-8 col-lg-offset-2">
+				<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
 					<h1><span>Smart</span> Agency Landing Page</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, fuga provident. Libero magni quibusdam labore ad iste saepe hic, maxime qui ipsum tempore beatae, volu tomi ptates doloremque rerum aspernatur dolorum at!</p>
 				</div>
