add works_img scale effect on hover

--- a/lesson-14/index.html
+++ b/lesson-14/index.html
@@ -120,8 +120,9 @@
 			</div> <!-- /row -->
 	<!-- WORKS BOXES -->
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_1.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #1</p>
@@ -130,8 +131,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_2.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #2</p>
@@ -140,8 +142,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_3.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #3</p>
@@ -150,8 +153,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_4.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #4</p>
@@ -160,8 +164,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_5.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #5</p>
@@ -170,8 +175,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_6.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #6</p>
@@ -180,8 +186,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_7.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #7</p>
@@ -190,8 +197,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_8.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #8</p>
@@ -200,8 +208,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 works__col">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 					<div class="works__box">
+						<img class="img-responsive" src="./img/works_9.jpg" alt="">
 						<div class="signature__wrap">
 							<div class="works__signature">
 								<p>Work #9</p>
