replace FEATURES WORKS css transition upper

--- a/lesson-14/index.html
+++ b/lesson-14/index.html
@@ -108,7 +108,7 @@
 			</div> <!-- /row -->
 		</div> <!-- /container -->
 	</section>
-<!-- FEATURES WORKS =========================== -->
+<!-- FEATURED WORKS =========================== -->
 	<section class="works" id="Featured_Works">
 		<div class="container">
 	<!-- WORKS CAPTION -->
