--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -264,7 +264,7 @@
 							<button>Know More</button>
 						</div> 
 						<div class="col-lg-5"> <!-- pictures -->
-							<img src="./img/Serv/watches_1.png" alt="" class="img-responsive">
+							<img src="./img/serv/watches_1.png" alt="" class="img-responsive">
 						</div>
 					</div> <!-- /row -->
 					<div class="row tab-pane" role="tabpanel" id="Retro_Design">
@@ -275,7 +275,7 @@
 							<button>Know More</button>
 						</div> 
 						<div class="col-lg-5"> <!-- pictures -->
-							<img src="./img/Serv/watches_2.png" alt="" class="img-responsive">
+							<img src="./img/serv/watches_2.png" alt="" class="img-responsive">
 						</div>
 					</div> <!-- /row -->
 					<div class="row tab-pane" role="tabpanel" id="Color_Design">
@@ -286,7 +286,7 @@
 							<button>Know More</button>
 						</div> 
 						<div class="col-lg-5"> <!-- pictures -->
-							<img src="./img/Serv/watches_3.png" alt="" class="img-responsive">
+							<img src="./img/serv/watches_3.png" alt="" class="img-responsive">
 						</div>
 					</div> <!-- /row -->
 				</div>
