--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -239,12 +239,12 @@
 					<ul class="serv__list_group nav nav-tabs" role="tablist">
 						<li role="presentation" class="active serv__list_item">
 							<a href="#Modern_Design" aria-controls="Modern_Design" role="tab" data-toggle="tab">
-								<img src="./img/serv/tab_1.png" alt="1">
+								<img src="./img/Serv/tab_1.png" alt="1">
 							</a>
 						</li>
 						<li role="presentation" class="serv__list_item">
 							<a href="#Retro_Design" aria-controls="Retro_Design" role="tab" data-toggle="tab">
-								<img src="./img/serv/tab_2.png" alt="2">
+								<img src="./img/Serv/tab_2.png" alt="2">
 							</a>
 						</li>
 						<li role="presentation" class="serv__list_item" id="qwerty">
