--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -299,7 +299,7 @@
 	<!-- FAQ CAPTION -->
 			<div class="row section__caption">
 				<div class="col-xs-12">
-					<h2>Frequently Asked <span>Question</span></h2>
+					<h2>Frequently Asked <span>Questions</span></h2>
 					<p></p>
 				</div>
 			</div> <!-- /row -->
