PROCESS TAB remove nav nav-bar classes

--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -236,7 +236,7 @@
 			<div class="row">
 				<div class="col-lg-2"> <!-- tab-buttons -->
 
-					<ul class="serv__list_group nav nav-tabs" role="tablist">
+					<ul class="serv__list_group" role="tablist">
 						<li role="presentation" class="active serv__list_item">
 							<a href="#Modern_Design" aria-controls="Modern_Design" role="tab" data-toggle="tab">
 								<img src="./img/Serv/tab_1.png" alt="1">
