add paragraph to FAQ section__caption

--- a/lesson-16/index.html
+++ b/lesson-16/index.html
@@ -302,7 +302,7 @@
 			<div class="row section__caption">
 				<div class="col-xs-12">
 					<h2>Frequently Asked <span>Questions</span></h2>
-					<p></p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, vero, id. Aperiam temporibus iure, deleniti enim?</p>
 				</div>
 			</div> <!-- /row -->
 	<!-- FAQ CONTENT -->
