SERVICES debug links

--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -92,7 +92,7 @@
 		    </div>
 		  </div>
 		</div>
-<!-- HEADER =================================== -->
+<!-s HEADER =================================== -->
 	<header class="header" id="Smart_Agency">
 		<div class="container">
 			<div class="row header__top">
@@ -315,17 +315,17 @@
 					<ul class="serv__list_group" role="tablist">
 						<li role="presentation" class="active serv__list_item">
 							<a href="#Modern_Design" aria-controls="Modern_Design" role="tab" data-toggle="tab">
-								<img src="./img/Serv/tab_1.png" alt="1">
+								<img src="./img/serv/tab_1.png" alt="1">
 							</a>
 						</li>
 						<li role="presentation" class="serv__list_item">
 							<a href="#Retro_Design" aria-controls="Retro_Design" role="tab" data-toggle="tab">
-								<img src="./img/Serv/tab_2.png" alt="2">
+								<img src="./img/serv/tab_2.png" alt="2">
 							</a>
 						</li>
 						<li role="presentation" class="serv__list_item" id="qwerty">
 							<a href="#Color_Design" aria-controls="Color_Design" role="tab" data-toggle="tab">
-								<img src="./img/Serv/tab_3.png" alt="3">
+								<img src="./img/serv/tab_3.png" alt="3">
 							</a>
 						</li>
 					</ul>
@@ -340,7 +340,7 @@
 							<button type="button" class="serv__text_button" data-toggle="modal" data-target="#mw_services"><span></span>Know More</button>
 						</div> 
 						<div class="col-lg-5"> <!-- pictures -->
-							<img src="./img/Serv/watches_1.png" alt="" class="img-responsive">
+							<img src="./img/serv/watches_1.png" alt="" class="img-responsive">
 						</div>
 					</div> <!-- /row -->
 					<div class="row tab-pane" role="tabpanel" id="Retro_Design">
@@ -351,7 +351,7 @@
 							<button type="button" class="serv__text_button" data-toggle="modal" data-target="#mw_services"><span></span>Know More</button>
 						</div> 
 						<div class="col-lg-5"> <!-- pictures -->
-							<img src="./img/Serv/watches_2.png" alt="" class="img-responsive">
+							<img src="./img/serv/watches_2.png" alt="" class="img-responsive">
 						</div>
 					</div> <!-- /row -->
 					<div class="row tab-pane" role="tabpanel" id="Color_Design">
@@ -362,7 +362,7 @@
 							<button type="button" class="serv__text_button" data-toggle="modal" data-target="#mw_services"><span></span>Know More</button>
 						</div> 
 						<div class="col-lg-5"> <!-- pictures -->
-							<img src="./img/Serv/watches_3.png" alt="" class="img-responsive">
+							<img src="./img/serv/watches_3.png" alt="" class="img-responsive">
 						</div>
 					</div> <!-- /row -->
 				</div>
