FOOTER update links

--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -92,7 +92,7 @@
 		    </div>
 		  </div>
 		</div>
-<!-s HEADER =================================== -->
+<!-- HEADER =================================== -->
 	<header class="header" id="Smart_Agency">
 		<div class="container">
 			<div class="row header__top">
@@ -521,7 +521,7 @@
 		</div>
 	</section>
 <!-- FOOTER =================================== -->
-	<footer class="footer">
+	<footer class="footer" id="footer">
 		<div class="container">
 	<!-- BUTTON -->
 			<div class="row">
@@ -532,10 +532,10 @@
 	<!-- SOCIAL & COPYRIGHT -->
 			<div class="row footer__bottom">
 				<div class="col-xs-6">
-					<a href=""><i class="footer__social fa fa-facebook"></i></a>
-					<a href=""><i class="footer__social fa fa-twitter"></i></a>
-					<a href=""><i class="footer__social fa fa-dribbble"></i></a>
-					<a href=""><i class="footer__social fa fa-behance"></i></a>
+					<a href="#footer"><i class="footer__social fa fa-facebook"></i></a>
+					<a href="#footer"><i class="footer__social fa fa-twitter"></i></a>
+					<a href="#footer"><i class="footer__social fa fa-dribbble"></i></a>
+					<a href="#footer"><i class="footer__social fa fa-behance"></i></a>
 				</div>
 				<div class="col-xs-6">
 					<div class="footer__copyright">© 2015 - 2016 Deviserweb Ltd.</div>
