--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -144,7 +144,7 @@
 				</div>
 			</div>
 	<!-- PROCESS BOXES -->
-			<div class="row text-center wow animated fadeInUp" data-wow-delay="700ms">
+			<div class="row text-center wow animated fadeIn" data-wow-delay="700ms">
 			<!-- TOMI -->
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="process_box process_box_tomi">
