--- a/lesson-20/index.html
+++ b/lesson-20/index.html
@@ -22,6 +22,23 @@
 </head>
 <body>
 <!-- POPUP WINDOWS ============================ -->
+	<!-- BOOTSTRAP MODAL for HEADER form -->
+		<div class="modal fade bs-example-modal-sm" id="mw_form_header" tabindex="-1" role="dialog" aria-labelledby="Contact Us">
+		  <div class="modal-dialog modal-sm" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="myModalLabel">Спасибо!</h4>
+		      </div>		    
+		      <div class="modal-body text-center">
+						<p>Сам иди!</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>	
+		    </div>
+		  </div>
+		</div>
 	<!-- CSS MODAL for WORKING PROCESS buttons-->
 		<div class="popup-overlay" id="mw_process">
 			<div class="popup wow animated fadeIn">
@@ -122,7 +139,7 @@
 				<div class="col-xs-12">
 					<div class="header__form wow animated fadeInLeft" data-wow-delay="500ms">
 						<p><span>Send</span> A Message</p>
-						<form id="form_message" action="mail.php" method="POST">
+						<form id="form_header" action="smart.php" method="POST">
 							<input type="hidden" name="from" value="header">
 							<input type="text" name="name" placeholder="Your Name">
 							<input type="email" name="email" placeholder="Your Email">
@@ -550,12 +567,13 @@
 	</footer>
 
 <!-- ================================== SCRIPTS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <!-- SVG modal windows -->
-  <script src="js/snap.svg-min.js"></script>
-	<script src="js/main.js"></script>
-	<script src="./js/fotorama.js"></script> <!-- fotorama slider -->
+	<!-- common scripts -->
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	  <script src="./js/bootstrap.min.js"></script>
+	  <!-- SVG modal windows -->
+	  <script src="js/snap.svg-min.js"></script>
+		<script src="js/main.js"></script>
+		<script src="./js/fotorama.js"></script> <!-- fotorama slider -->
   <!-- Slick Slider -->
 	  <script src="./libs/slick/slick.min.js"></script>
 	  <script>
@@ -585,5 +603,22 @@
     <script>
 	    new WOW().init();
     </script>	
+  <!-- Send form in header -->
+	  <script>
+	 	$(document).ready(function() {
+	   	$("#form_header").submit(function() {
+	 			$.ajax({
+	 	 			type: "POST",
+	 	 			url: "smart.php",
+	 	 			data: $(this).serialize()
+	 	 		}).done(function() {
+	 	 			$(this).find("input").val("");
+	 	 			$("#mw_form_header").modal("show");
+	 	 			$("#form_header").trigger("reset");
+	 	 		});
+	 	 		return false;
+	 	 	});
+	 	});   	
+  </script>
 </body>
 </html>
