--- a/lesson-24/index.html
+++ b/lesson-24/index.html
@@ -8,13 +8,10 @@
   <title>Smart Agency</title>
 <!-- ==================================== LINKS -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-  <link rel="stylesheet" href="./css/font-awesome.min.css">
-  <link rel="stylesheet" href="./libs/slick/slick.css">
-  <link rel="stylesheet" href="./libs/slick/slick-theme.css">
-  <link rel="stylesheet" href="./css/fotorama.css">
-  <link rel="stylesheet" href="./css/animate.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <!-- first screen style scc -->
+  <style>
+  	.open-reg{font-family:"Open Sans",sans-serif;font-weight:400}.open-bold{font-family:"Open Sans",sans-serif;font-weight:600}html,body{margin:0;padding:0;width:100%;height:100%}body{min-height:100%;font-family:"Open Sans",sans-serif;font-weight:400;font-size:16px;color:#6d6d6d}section,header{min-height:100vh}.section__caption{margin-top:10%;margin-bottom:9%;text-align:center}.section__caption h1,.section__caption h2{font-family:"Open Sans",sans-serif;font-weight:600;font-size:50px}.section__caption h1 span,.section__caption h2 span{color:#fc7253}input:focus,button:focus,textarea:focus{outline:none}.header{position:relative;min-height:100vh;background-color:#f5f5f5;background-image:url("../img/header/header_bg.jpg");background-position:center center;background-size:cover}.header__top{margin-top:4%}.header__top_logo{width:150px;height:55px;border:4px solid #6d6d6d;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;font-size:37px;font-family:"Open Sans",sans-serif;font-weight:600;text-align:center;line-height:47px}.logo_colored{color:#fd9b85}.header__top_menu::before,.header__top_menu::after{display:block;content:'';width:34px;border:2px solid #6d6d6d;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px}.header__top_menu_wrapper{position:relative;float:right}.header__menu_stick{width:34px;margin:4px 0;border:2px solid #6d6d6d;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px}.header__form{width:100%;height:388px;max-width:372px;margin-top:55px;padding:20px 40px;-webkit-box-shadow:0 0 57px 0 rgba(20,20,21,0.2);-moz-box-shadow:0 0 57px 0 rgba(20,20,21,0.2);box-shadow:0 0 57px 0 rgba(20,20,21,0.2);background-color:#fff;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;text-align:center}.header__form p{margin-bottom:12px;font-size:20px}.header__form p span{color:#fd9b85}.header__form input,.header__form textarea{width:100%;margin-top:32px;border:none;border-bottom:1px solid #bababa;font-size:15px}.header__form button{width:100%;max-width:238px;height:55px;margin:0 auto;margin-top:15px;border:none;-webkit-border-radius:50px;-moz-border-radius:50px;border-radius:50px;background-color:#fc7253;font-size:16px;line-height:25px;-webkit-box-shadow:0 11px 20px 0 rgba(20,20,21,0.1);-moz-box-shadow:0 11px 20px 0 rgba(20,20,21,0.1);box-shadow:0 11px 20px 0 rgba(20,20,21,0.1);vertical-align:middle;color:#fff}.header__form button:active{-webkit-box-shadow:0 11px 20px 0 rgba(20,20,21,0.15);-moz-box-shadow:0 11px 20px 0 rgba(20,20,21,0.15);box-shadow:0 11px 20px 0 rgba(20,20,21,0.15)}.header__form button span{margin-left:10px;font-size:22px}.video-bg{position:absolute;width:100%;height:100%;overflow:hidden}.video-bg>video{position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;-webkit-transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%);-o-transform:translate(-50%, -50%);transform:translate(-50%, -50%)}
+  </style>
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -588,6 +585,14 @@
 			</div> <!-- /row -->
 		</div>
 	</footer>
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+<link rel="stylesheet" href="./css/font-awesome.min.css">
+<link rel="stylesheet" href="./libs/slick/slick.css">
+<link rel="stylesheet" href="./libs/slick/slick-theme.css">
+<link rel="stylesheet" href="./css/fotorama.css">
+<link rel="stylesheet" href="./css/animate.css">
+<link rel="stylesheet" href="./css/style.css">
 
 <!-- ================================== SCRIPTS -->
 	<!-- external scripts -->
