make hambutger menu a - position block

--- a/lesson-26/index.html
+++ b/lesson-26/index.html
@@ -135,7 +135,8 @@
 						<a href="#" class="header__top_menu">
 							<div class="header__menu_stick"></div>
 						</a>
-						<div class="mw__menu wow animated fadeInRight"> <!-- MENU MODAL -->
+		<!-- MENU MODAL -->
+						<div class="mw__menu wow animated fadeInRight"> 
 							<ul class="mw__menu_list">
 								<li class="mw__menu_item"><a href="#Working_Process">Working Process</a></li>
 								<li class="mw__menu_item"><a href="#Featured_Works">Featured Works</a></li>
