make responsive feedback (Hallelujah)

--- a/Innovant/index.html
+++ b/Innovant/index.html
@@ -27,7 +27,9 @@
 					<div class="header__actions">
 						<a href="#"><i class="header__basket icon-header_cart"></i></a>
 						<a href="#"><i class="header__search icon-header_search"></i></a>
-						<a href="#" class="header__hamburger"></a>
+						<a href="#" class="header__hamburger">
+							<span></span>
+						</a>
 					</div>
 					<ul class="header__menu_list">
 						<li class="header__menu_item active"><a href="#">Home</a></li>
@@ -322,20 +324,28 @@
 			<div class="price__card">
 				<div class="price-card__topline"></div>
 				<h3 class="price-card__caption"><a href="#">Personal</a></h3>
-				<span class="price-card__stick"></span>
 				<div class="price-card__cost">From <span>$99</span> Per Months</div>
 		<!-- list of fetures -->
 				<ul class="price-card__list">
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">01 PSD pack</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							01 PSD pack
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">01 Wordpress install</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							01 Wordpress install
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">10 Support tickets</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							10 Support tickets
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 				</ul>
@@ -346,20 +356,28 @@
 			<div class="price__card">
 				<div class="price-card__topline"></div>
 				<h3 class="price-card__caption"><a href="#">Business</a></h3>
-				<span class="price-card__stick"></span>
 				<div class="price-card__cost">From <span>$99</span> Per Months</div>
 		<!-- list of fetures -->
 				<ul class="price-card__list">
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">10 PSD pack</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							10 PSD pack
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">10 Wordpress install</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							10 Wordpress install
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">100 Support tickets</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							100 Support tickets
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 				</ul>
@@ -370,20 +388,28 @@
 			<div class="price__card">
 				<div class="price-card__topline"></div>
 				<h3 class="price-card__caption"><a href="#">Unlimited</a></h3>
-				<span class="price-card__stick"></span>
 				<div class="price-card__cost">From <span>$99</span> Per Months</div>
 		<!-- list of fetures -->
 				<ul class="price-card__list">
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">50 PSD pack</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							50 PSD pack
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">100 Wordpress install</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							100 Wordpress install
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 					<li class="price-card__item">
-						<h4 class="price-card__item-caption">Support unlimited</h4>
+						<h4 class="price-card__item-caption">
+							<i class="icon-price_checkmark"></i>
+							Support unlimited
+						</h4>
 						<p class="price-card__item-desc">Lorem ipsum dolor sit amet, consectetur incididuntut.</p>
 					</li>
 				</ul>
